gonna start changing the schematics over to nbt's so we don't have to rely on external mods.
Signed-off-by: Thunderrock424242 <masonjoshua8@gmail.com>